fix: error correction

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
 console.log(sum(5, 7));
 					</code></pre>
 				</section>
-				<section class="expirience">
-					<h2 class="section-title section-title--bg">Expirience</h2>
+				<section class="experience">
+					<h2 class="section-title section-title--bg">Experience</h2>
 					<ul class="project-list">
 						<li class="project-list__item">
 							<span class="project-list__heading">Project gallery with cards</span>
@@ -195,7 +195,7 @@ console.log(sum(5, 7));
 				<img class="footer__icon" src="./img/github.svg" alt="GitHub icon">
 				<span>Visit my GitHub</span>
 			</a>
-			<span class="footer__date">July 2024г.</span>
+			<span class="footer__date">July 2024</span>
 			<a class="footer__logo" href="https://rs.school/courses/javascript-ru" target="_blank">
 				<img src="./img/rs-school-logo.svg" alt="Logo RSScool">
 			</a>
